<resources>
    <string name="app_name">SafetyNet</string>
    <string name="action_settings">Settings</string>

    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="job">What I do</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_registered">Don\'t have an account? Sign Up</string>
    <string name="registered">Already have an account? Sign In</string>
    <string name="sign_in">sign in</string>
    <string name="sign_out">sign out</string>
    <string name="update">Update</string>
    <string name="message">Message</string>
    <string name="empty_email">Enter email</string>
    <string name="empty_pass">Enter password</string>
    <string name="empty_job">Enter what you do</string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="search">Search</string>
    <string name="mail_suffix">\@gmail.com</string>
    <string name="no_data">No data found</string>
    <string name="chat_user">chatUser</string>
    <string name="chat_user_job">chatUserJob</string>
    <string name="chat_user_photo">chatUserPhoto</string>
    <string name="new_conv">Start new conversation</string>
    <string name="chatUserUid">uid</string>
    <string name="logo_dsc">logo_dsc</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="username">Username</string>
    <string name="distance">Distance</string>
    <string name="alerts">Alerts</string>
    <string name="settings">Settings</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="news_feed">news feed</string>
    <string name="map">map</string>
    <string name="emergency_button">emergency button</string>
    <string name="post">Post</string>
    <string name="resource">resource</string>
    <string name="gallery">gallery</string>
    <string name="camera">camera</string>
    <string name="enter_text_here">Enter text here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_photo">Change photo</string>
    <string name="done">Done</string>
    <string name="log_out">log out</string>
    <string name="edit">edit</string>
    <string name="like">like</string>
    <string name="dislike">dislike</string>
    <string name="pin_location">pin location</string>
    <string name="report">report</string>
    <string name="content">content</string>
</resources>