<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/city"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/email_su"
        style="@style/textfield_style"
        android:layout_marginTop="@dimen/email_margin"
        android:autofillHints="emailAddress"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/pass_su"
        style="@style/textfield_style"
        android:layout_marginTop="@dimen/pass_margin"
        android:autofillHints="password"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/sign_up"
        style="@style/button_style"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/sign_in_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/registered"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size" />

</LinearLayout>
