<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewPostFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="32dp">

            <EditText
                android:id="@+id/input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners_for_image_count"
                android:backgroundTint="#39EF4224"
                android:hint="@string/enter_text_here"
                android:inputType="textMultiLine"
                android:minLines="5"
                android:padding="10dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingVertical="8dp">

                <ImageButton
                    android:id="@+id/gallery"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/button_color"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/gallery"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_baseline_add_to_photos_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/appMainColor" />


                <ImageButton
                    android:id="@+id/camera"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/button_color"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/camera"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_baseline_camera_alt_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/gallery"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/appMainColor" />

                <ImageButton
                    android:id="@+id/send_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/button_color"
                    android:contentDescription="@string/post"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_baseline_send_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/appMainColor" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>